--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
   <div class="header">
     <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\index.html"><img class="logo" src="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\images\Spotify_Logo_RGB_White.png" alt="spotify"></a>
     <div class="topbar">
-      <button class="button sign" type="button" name="button">Sign Up</button>
-      <button class="button login" type="button" name="button">login</button>
+      <button class="button sign" type="button" name="button"><a href="https://www.spotify.com/us/signup/">Sign Up</a></button>
+      <button class="button login" type="button" name="button"><a href="https://accounts.spotify.com/login/?continue=https%3A%2F%2Fopen.spotify.com%2F%3Fl2l%3D1">Login</a></button>
     </div>
   </div>
   <div class="mainpage">
     <div style="background-color:#47fd98
 ;" class="column">
       <img class="page" src="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\images\Get 3 months of Premium for free.jpeg" alt="premium">
-      <button class="button2 getmonths" type="button" name="button"> <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Get 3 months free.html">GET 3 MONTHS FREE</a></button>
+      <button class="button2 getmonths" type="button" name="button"> <a href="https://www.spotify.com/us/premium/">GET 3 MONTHS FREE</a></button>
     </div>
     <div style="background-color:#ac4efe
 ;" class="column">
       <img class="page" src="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\images\Music for everyone.jpeg" alt="web player">
-      <button class="button2 music" type="button" name="button"> <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Web Player.html">JUMP INTO THE MUSIC</a></button>
+      <button class="button2 music" type="button" name="button"> <a href="https://open.spotify.com/">JUMP INTO THE MUSIC</a></button>
     </div>
     <div style="background-color:#0bf8e6
 ;" class="column">
       <img class="page" src="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\images\Download Spotify.jpeg" alt="download">
-      <button class="button2 freedown" type="button" name="button"> <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Download for your Platform.html">FREE DOWNLOAD</a></button>
+      <button class="button2 freedown" type="button" name="button"> <a href="https://www.spotify.com/us/download/windows/">FREE DOWNLOAD</a></button>
     </div>
   </div>
   <div class="">
@@ -43,27 +43,27 @@
           </thead>
           <tbody>
             <tr>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\About.html">About</a></td>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\for artists.html">For Artists</a></td>
+              <td><a class="bottomlinks" href="https://www.spotify.com/us/about-us/contact/">About</a></td>
+              <td><a class="bottomlinks" href="https://artists.spotify.com/">For Artists</a></td>
             </tr>
             <tr>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\job.html">Jobs</a></td>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\developers.html">Developers</a></td>
+              <td><a class="bottomlinks" href="https://www.spotifyjobs.com/">Jobs</a></td>
+              <td><a class="bottomlinks" href="https://developer.spotify.com/">Developers</a></td>
             </tr>
             <tr>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\for the record.html">For the Record</a></td>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Spotify Advertising.html">Advertising</a></td>
+              <td><a class="bottomlinks" href="https://newsroom.spotify.com/">For the Record</a></td>
+              <td><a class="bottomlinks" href="https://ads.spotify.com/">Advertising</a></td>
             </tr>
             <tr>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\instagram.html">Instagram</a></td>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\investors.html">Investors</a></td>
+              <td><a class="bottomlinks" href="https://instagram.com/spotify">Instagram</a></td>
+              <td><a class="bottomlinks" href="https://investors.spotify.com/">Investors</a></td>
             </tr>
             <tr>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Twitter.html">Twitter</a></td>
-              <td><a class="bottomlinks" href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Vendors.html">Vendors</a></td>
+              <td><a class="bottomlinks" href="https://twitter.com/spotify">Twitter</a></td>
+              <td><a class="bottomlinks" href="https://spotifyforvendors.com/">Vendors</a></td>
             </tr>
             <tr>
-              <td><a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\Facebook.html">Facebook</a></td>
+              <td><a href="https://www.facebook.com/Spotify">Facebook</a></td>
             </tr>
           </tbody>
         </table>
