--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="header">
-    <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\index.html"><img class="logo" src="images\Spotify_Logo_RGB_White.png" alt="spotify"></a>
+    <a href="C:\Users\micha\OneDrive\Documents\WEB DEV\spotify by lounge222\index.html"><img class="logo" src="cozy222\images\Spotify_Logo_RGB_White.png" alt="spotify"></a>
     <div class="topbar">
       <button class="button sign" type="button" name="button"><a href="https://www.spotify.com/us/signup/">Sign Up</a></button>
       <button class="button login" type="button" name="button"><a href="https://accounts.spotify.com/login/?continue=https%3A%2F%2Fopen.spotify.com%2F%3Fl2l%3D1">Login</a></button>
@@ -18,17 +18,17 @@
   <div class="mainpage">
     <div style="background-color:#47fd98
 ;" class="column">
-      <img class="page" src="images\Get 3 months of Premium for free.jpeg" alt="premium">
+      <img class="page" src="cozy222\images\Get 3 months of Premium for free.jpeg" alt="premium">
       <button class="button2 getmonths" type="button" name="button"> <a href="https://www.spotify.com/us/premium/">GET 3 MONTHS FREE</a></button>
     </div>
     <div style="background-color:#ac4efe
 ;" class="column">
-      <img class="page" src="images\Music for everyone.jpeg" alt="web player">
+      <img class="page" src="cozy222\images\Music for everyone.jpeg" alt="web player">
       <button class="button2 music" type="button" name="button"> <a href="https://open.spotify.com/">JUMP INTO THE MUSIC</a></button>
     </div>
     <div style="background-color:#0bf8e6
 ;" class="column">
-      <img class="page" src="images\Download Spotify.jpeg" alt="download">
+      <img class="page" src="cozy222\images\Download Spotify.jpeg" alt="download">
       <button class="button2 freedown" type="button" name="button"> <a href="https://www.spotify.com/us/download/windows/">FREE DOWNLOAD</a></button>
     </div>
   </div>
